there has to be a better way

--- a/resume.html
+++ b/resume.html
@@ -28,7 +28,7 @@ Website:  http://joel.codes</p>
 </tr>
 </tbody>
 </table>
-| Day to day
+Day to day
 <ul>
 <li>
 Responsible for maintaining CI in Atlassian's Bamboo
@@ -40,7 +40,7 @@ Participate in multiple sprint planning sessions to keep on top of developer nee
 Constantly research methods to improve automated deployments
 </li>
 </ul>
-| | Accomplishments
+Accomplishments
 <ul>
 <li>
 Re-Wrote legacy fabric scripts in Anisble
@@ -71,7 +71,7 @@ Multitude of bug fixes given back to ansible
 </tr>
 </tbody>
 </table>
-| Day to day
+Day to day
 <ul>
 <li>
 Responsible for maintaining CI in Atlassian's Bamboo
@@ -86,7 +86,7 @@ Participate in multiple sprint planning sessions to keep on top of developer nee
 Constantly research methods to improve automated deployments
 </li>
 </ul>
-| | Accomplishments
+Accomplishments
 <ul>
 <li>
 Speed up infrastructure development utilizing vagrant
@@ -120,7 +120,7 @@ Multitude of bug fixes given back to ansible
 </tr>
 </tbody>
 </table>
-| Day to day
+Day to day
 <ul>
 <li>
 Lead developer responsible for maintaining existing perl scripts and creating new ones as necessary to enable researchers to complete their work in a timely and efficient manner
@@ -141,7 +141,7 @@ Primary contact for any issues on Linux systems before escalating to the help de
 Use vagrant and chef to automate setting up development and production environments
 </li>
 </ul>
-| |Accomplishments
+Accomplishments
 <ul>
 <li>
 Through profiling of the census data ingest process decrease run time by %20 through making low risk changes
@@ -156,7 +156,7 @@ Organize a monthly educational meeting with content that is both educational and
 Attended one day training session from Opscode and used that knowledge to make reproducible development environments
 </li>
 <li>
-<p>Got the university a 95% discount on github for 3,500 users|</p>
+<p>Got the university a 95% discount on github for 3,500 users</p>
 <p><br></p>
 <table>
 <thead>
@@ -170,7 +170,7 @@ Attended one day training session from Opscode and used that knowledge to make r
 </tr>
 </tbody>
 </table>
-| Day to day
+Day to day
 <ul>
 <li>
 Lead developer in maintaining custom operating system for the Switchvox product line
@@ -185,7 +185,7 @@ Train new hires on best practices and perform code reviews
 Define and implement API’s for the products back end that the front end team, and customers can use
 </li>
 </ul>
-|Accomplishments
+Accomplishments
 <ul>
 <li>
 Converted a legacy build system which required significant human interaction to run autonomously
@@ -213,7 +213,7 @@ Implemented an opt in anonymous data collection system to allow informed decisio
 </tr>
 </tbody>
 </table>
-|Day to day
+Day to day
 <ul>
 <li>
 Develop modules for internal use
@@ -240,7 +240,7 @@ Create database tables and queries as needed for new projects
 Track status of all work in ticketing system
 </li>
 </ul>
-|Accomplishments
+Accomplishments
 <ul>
 <li>
 Develop hook scripts for SVN to automatically build software
