--- a/resume.html
+++ b/resume.html
@@ -158,6 +158,7 @@ Attended one day training session from Opscode and used that knowledge to make r
 <li>
 <p>Got the university a 95% discount on github for 3,500 users</p>
 <p><br></p>
+</ul>
 <table>
 <thead>
 <tr class="header">
@@ -253,9 +254,9 @@ Increased performance of our pull based customer reporting tool. Instead of taki
 </li>
 </ul>
 <p><br></p>
-<table style="width:4%;">
+<table>
 <colgroup>
-<col width="4%" />
+<col />
 </colgroup>
 <thead>
 <tr class="header">
