--- a/resume.html
+++ b/resume.html
@@ -39,6 +39,9 @@ Participate in multiple sprint planning sessions to keep on top of developer nee
 <li>
 Constantly research methods to improve automated deployments
 </li>
+<li>
+Manage user accounts across multiple services
+</li>
 </ul>
 Accomplishments
 <ul>
