--- a/resume.html
+++ b/resume.html
@@ -49,7 +49,7 @@ Accomplishments
 Re-Wrote legacy fabric scripts in Anisble
 </li>
 <li>
-Migrated entire infrastructure from EC2 Classic to VPCs
+Migrated entire infrastructure from EC2 Classic to VPCs using Terraform to automate the process
 </li>
 <li>
 Speed up infrastructure development utilizing vagrant
